Add margin-bottom to card div in index.html
Updated card div style to include margin-bottom.

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
 
           <p class="welcome-copy">Számold ki, mennyi munkaórádba kerül egy vágyott vásárlás és érezd nagyon rosszul magad!</p>
           
-          <div class="card" style="width:100%;">
+          <div class="card" style="width:100%; margin-bottom:40px;">
             <div class="stack">
               <button onclick="goTo('profile'); track('start_click')">🚀 Kezdjük el!</button>
               <p style="text-align:center;font-size:0.85rem;">Már <strong>2,847</strong> felhasználó spórolt <strong>18,392</strong> órát! 🎉</p>
