--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
       <!-- 1. Welcome -->
       <section id="screen-welcome" class="screen active">
         <div class="welcome-hero">
-          <div class="welcome-pill">💰 Personal finance companion</div>
+          <div class="welcome-pill">💰 Számolj és legyél szomorú!</div>
           <h1>Munkaóra</h1>
 
           <div class="hero-clock" role="img" aria-label="Alarm clock">
